[gd_scene load_steps=19 format=3 uid="uid://c6ia3n5k1yxge"]

[ext_resource type="Texture2D" uid="uid://cysqsvfq3akck" path="res://Assets/Ending/Bad/Background.png" id="1_4poo5"]
[ext_resource type="Script" uid="uid://cehlj6nwh1s1" path="res://Kode/physical.gd" id="1_vxecx"]
[ext_resource type="Texture2D" uid="uid://bfr0uvbkqcau8" path="res://Assets/Gamemode/Physical/START__.png" id="3_4s8nv"]
[ext_resource type="Texture2D" uid="uid://brb10cn687gif" path="res://Assets/Gamemode/Physical/Komponen atas.png" id="3_dup57"]
[ext_resource type="FontFile" uid="uid://chp1oa2oeb38x" path="res://Assets/font/government-agent-bb.regular.ttf" id="3_k1h0q"]
[ext_resource type="Texture2D" uid="uid://bqtn82yg43f17" path="res://Assets/Gamemode/Physical/komp physical mode.png" id="4_y5pdm"]
[ext_resource type="Texture2D" uid="uid://3cs573x1op31" path="res://Assets/Gamemode/Physical/Component 1.png" id="5_6ewqq"]
[ext_resource type="Texture2D" uid="uid://3lo3s5b4h2tp" path="res://Assets/Gamemode/Physical/Bg i.png" id="5_6ngrv"]
[ext_resource type="Texture2D" uid="uid://dcwpdqv1vvsec" path="res://Assets/Gamemode/Physical/_.png" id="6_cpug0"]
[ext_resource type="Texture2D" uid="uid://buasl7qtthx27" path="res://Assets/Gamemode/Physical/Gamemode _ Switch.png" id="7_cpug0"]
[ext_resource type="Texture2D" uid="uid://bc8h8ansmpwdc" path="res://Assets/animasi/START__ (1).png" id="7_r5aut"]
[ext_resource type="Texture2D" uid="uid://r5pbnro2e8w1" path="res://Assets/Gamemode/Physical/Physical.png" id="8_1d630"]
[ext_resource type="Texture2D" uid="uid://di4jkgxjxqkn1" path="res://Assets/animasi/START__.png" id="8_5w1eb"]
[ext_resource type="Texture2D" uid="uid://b6vbfoestyidl" path="res://Assets/animasi/Component 1 (1).png" id="10_oqw8s"]
[ext_resource type="Texture2D" uid="uid://c87exbwwn7wd4" path="res://Assets/animasi/Component 1.png" id="11_unq3a"]
[ext_resource type="Texture2D" uid="uid://b6i0obd3li2hc" path="res://Assets/Gamemode/Physical/Line 1.png" id="12_r5aut"]
[ext_resource type="Texture2D" uid="uid://bb1u52ppdosh0" path="res://Assets/Gamemode/Physical/Line 2.png" id="13_5w1eb"]
[ext_resource type="FontFile" uid="uid://w8ldyic1ffai" path="res://Assets/font/Consolas Regular.ttf" id="14_oqw8s"]

[node name="Physical" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vxecx")

[node name="BG" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_4poo5")

[node name="Komp atas" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -8.0
offset_top = 31.0
offset_right = 1912.0
offset_bottom = 620.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_dup57")

[node name="ireng" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 82.0
offset_top = 402.0
offset_right = 1363.0
offset_bottom = 476.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("4_y5pdm")

[node name="bgI" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 879.0
offset_top = 402.0
offset_right = 950.0
offset_bottom = 473.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("5_6ngrv")

[node name="StartButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 625.0
offset_top = 502.0
offset_right = 1516.0
offset_bottom = 670.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("3_4s8nv")
texture_pressed = ExtResource("7_r5aut")
texture_hover = ExtResource("8_5w1eb")

[node name="SwitchButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 52.0
offset_top = 501.0
offset_right = 730.0
offset_bottom = 700.0
scale = Vector2(0.55, 0.55)
texture_normal = ExtResource("5_6ewqq")
texture_pressed = ExtResource("10_oqw8s")
texture_hover = ExtResource("11_unq3a")

[node name="gamemodeswitch" type="TextureRect" parent="SwitchButton"]
layout_mode = 0
offset_left = 89.0909
offset_top = 132.727
offset_right = 441.091
offset_bottom = 172.727
texture = ExtResource("7_cpug0")

[node name="tanda" type="TextureRect" parent="SwitchButton"]
layout_mode = 0
offset_left = 61.8182
offset_top = 34.5454
offset_right = 649.818
offset_bottom = 100.545
texture = ExtResource("8_1d630")

[node name="BackButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 893.0
offset_top = 414.0
offset_right = 913.0
offset_bottom = 438.0
scale = Vector2(0.8, 0.8)
texture_normal = ExtResource("6_cpug0")

[node name="MartaText" type="Label" parent="."]
layout_mode = 0
offset_left = 1161.0
offset_top = 14.0
offset_right = 2201.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_k1h0q")
theme_override_font_sizes/font_size = 30
text = "Marta        Marta        Marta        Marta        Marta        Marta        Marta        Marta"

[node name="MartaText2" type="Label" parent="."]
layout_mode = 0
offset_left = 2228.0
offset_top = 14.0
offset_right = 3245.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_k1h0q")
theme_override_font_sizes/font_size = 30
text = "Marta        Marta        Marta        Marta        Marta        Marta        Marta        Marta"

[node name="line1" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 744.0
offset_top = 464.0
offset_right = 1451.0
offset_bottom = 522.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("12_r5aut")

[node name="line2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 577.0
offset_top = 599.0
offset_right = 1284.0
offset_bottom = 657.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("13_5w1eb")

[node name="Bginfo" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 949.0
offset_top = 402.0
offset_right = 1020.0
offset_bottom = 473.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("5_6ngrv")

[node name="Info" type="Label" parent="."]
layout_mode = 0
offset_left = 963.5
offset_top = 413.0
offset_right = 977.5
offset_bottom = 439.0
theme_override_fonts/font = ExtResource("14_oqw8s")
theme_override_font_sizes/font_size = 25
text = "i"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="SwitchButton" to="." method="_on_switch_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
